# Mandel

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN_AND_IMPLEMENTATION.md  LICENSE  README.md  RENDERING.md  TEST_PLAN.md  build.sh  imgui.ini  mandel_ui_test.cpp  mandel_ui_test.hpp  test_mandel_renderer.cpp  test_mandel_worker.cpp  test_translation_swap.cpp
src/: config.cpp  config.hpp  dummy_worker.cpp  dummy_worker.hpp  main_sdl.cpp  mandel.cpp  mandel.hpp  mandel.inl  mandel_control.cpp  mandel_control.hpp  mandel_render.cpp  mandel_render.hpp  mandel_render.inl  mandel_test.cpp  mandel_ui.cpp  mandel_ui.hpp  mandel_worker.cpp  mandel_worker.hpp  overscan_viewport.cpp  overscan_viewport.hpp  thread_pool.cpp  thread_pool.hpp  worker_base.hpp
